--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build" : "babel index.babel --out-file index.js"
+    "build" : "babel ./index.babel --out-file ./index.js"
   },
   "author": "Nicholas Bowen",
   "license": "ISC",
